Add About bug reproduce